@@ -1,9 +1,9 @@
-# $NetBSD: Makefile,v 1.19 2004/02/21 00:15:44 sjg Exp $
+# $NetBSD: Makefile,v 1.20 2004/05/11 18:28:32 sjg Exp $
 #
 
-DISTNAME=       bmake-20040220
+DISTNAME=       bmake-20040511
 CATEGORIES=	devel
-MASTER_SITES=   ftp://ftp.NetBSD.org/pub/incoming/sjg/
+MASTER_SITES=   ftp://ftp.NetBSD.org/pub/NetBSD/misc/sjg/
 
 MAINTAINER=	sjg@NetBSD.org
 HOMEPAGE=	http://www.crufty.net/help/sjg/bmake.html
@@ -11,19 +11,20 @@ COMMENT=	Portable (autoconf) version of NetBSD 'make' utility
 
 DEPENDS+=	mk-files>=20030714:../../devel/mk-files
 
-ONLY_FOR_PLATFORM=	NetBSD-*-*
-
 WRKSRC=		${WRKDIR}/bmake
+
 makesyspath=${PREFIX}/share/mk:/usr/share/mk:/usr/local/share/mk:/opt/share/mk
-GNU_CONFIGURE=	yes
+GNU_CONFIGURE=	no
 CONFIGURE_ARGS+= --with-default-sys-path=${makesyspath}
 
+do-configure:
+
 do-build:
-	cd ${WRKSRC} && MAKESYSPATH=${makesyspath} make -f makefile.boot bootstrap
+	cd ${WRKDIR} && ./bmake/boot-strap -q -o ${OPSYS} ${CONFIGURE_ARGS}
 
 do-install:
-	${INSTALL_PROGRAM} ${WRKSRC}/bmake ${PREFIX}/bin
-	${INSTALL_MAN} ${WRKSRC}/bmake.cat1 ${PREFIX}/man/cat1/bmake.0
-	${INSTALL_MAN} ${WRKSRC}/bmake.1 ${PREFIX}/man/man1
+	${INSTALL_PROGRAM} ${WRKDIR}/${OPSYS}/bmake ${PREFIX}/bin
+	${INSTALL_MAN} ${WRKDIR}/${OPSYS}/bmake.cat1 ${PREFIX}/man/cat1/bmake.0
+	${INSTALL_MAN} ${WRKDIR}/${OPSYS}/bmake.1 ${PREFIX}/man/man1
 
 .include "../../mk/bsd.pkg.mk"
